fix(lighthouse check): fix main and footer layout shifts
#35

--- a/src/css/carousel.css
+++ b/src/css/carousel.css
@@ -2,8 +2,8 @@
 /* root */
 .carousel {
     position: relative;
-    width: 100%;
     height: 50vh;
+    min-height: 400px;
     overflow: hidden;
     display: flex;
     align-items: center;
@@ -181,6 +181,11 @@
   transition: all 0.3s ease-in-out;
 }
 .dot.active { background: var(--clr-accent-red); transform: scale(1.2); }
+
+.carousel-container {
+  aspect-ratio: 16 / 9;
+  width: 100%;
+}
 
 @media (max-width: 900px) {
   .carousel-inner { 
