--- a/src/css/main-nav.css
+++ b/src/css/main-nav.css
@@ -3,6 +3,7 @@ header {
 }
 
 .header {
+    min-height: 100px;
     position: relative;
     display: flex;
     justify-content: space-between;
@@ -41,12 +42,15 @@ header {
     gap: 2rem;
     flex-shrink: 1;
     height: fit-content;
+    min-height: 100px;
     transition: all;
     transition-duration: 300;
 }
 
 .nav-link {
     position: relative;
+    height: 40px;
+    line-height: 40px;
     font-size: var(--body);
     font-family: var(--ff-primary);
 }
@@ -160,6 +164,8 @@ header {
     top: 3.6rem;
     right: 6rem;
     cursor: pointer;
+    min-height: 50px;
+    min-width: 50px;
 }
 
 .footer-container > .caption {
@@ -184,6 +190,7 @@ header {
 
 .footer {
     display: flex;
+    flex-shrink: 0;
     min-height: 200px;
     flex-direction: column ;
     gap: 2rem;
