--- a/src/css/root.css
+++ b/src/css/root.css
@@ -72,10 +72,10 @@ ol {
 html,
 body {
     height: 100%;
-    width: 100%;
-    overflow-x: hidden;
     margin: 0;
     padding: 0;
+    display: flex;
+    flex-direction: column;
     background-color: var(--clr-white);
     font-family:var(--ff-primary), system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     -webkit-font-smoothing: always;
@@ -121,6 +121,7 @@ a {
 
 main {
     display: flex;
+    height: fit-content;
     flex: 1;
     flex-direction: column;
     justify-content: center;
@@ -128,6 +129,10 @@ main {
     max-width: 1800px;
     margin-inline: auto;
     margin-block: 50px;
+}
+
+main.loading {
+  min-height: 80vh;
 }
 
 /* CSS RESET */
@@ -139,6 +144,9 @@ main {
 body {
     font-family: var(--ff-primary);
     color: var(--clr-black);
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
 .margin-i-S {
